--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^3.7.3"
   },
   "devDependencies": {
+    "@types/mermaid": "^8.2.1",
     "@types/node": "^12.12.17",
     "@types/puppeteer": "^2.0.0"
   }
