--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/mermaid": "^8.2.1",
+    "atob": "^2.1.2",
     "btoa": "^1.2.1",
     "mermaid": "^8.4.4",
     "puppeteer": "^2.0.0",
@@ -15,6 +16,7 @@
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
+    "@types/atob": "^2.1.2",
     "@types/btoa": "^1.2.3",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.17",
