--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mermaid-render",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "render mermaid diagrams outside of the browser using puppeteer",
   "main": "dist/index.js",
   "repository": "https://github.com/Zemnmez/mermaid-render",
@@ -29,7 +29,8 @@
   "scripts": {
     "transpile": "tsc",
     "test": "jest",
-    "node": "node"
+    "node": "node",
+    "Publish": "yarn jest && yarn transpile && yarn publish"
   },
   "engines": {
     "node": ">=10.0.0"
